# macro-utils-c

./: .gitignore  .gitmodules  CMakeLists.txt  c_build_tools_ref.yml  readme.md
.github/: copilot-instructions.md  fabricbot.json
.github/policies/: resourceManagement.yml
configs/: azure_macro_utils_cConfig.cmake  macro_utils_cConfig.cmake
doc/: macro_utils_design.md
inc/azure_macro_utils/: macro_utils.h  macro_utils_generated.h
inc/macro_utils/: macro_utils.h  macro_utils_generated.h
macro_utils_h_generator/: macro_utils.cs  macro_utils.tt  macro_utils_generated.cs  macro_utils_generated.tt  macro_utils_h_generator.csproj  program.cs
src/: macro_utils.c
tests/: CMakeLists.txt  define_enum_2_test.c  define_enum_2_test.h  define_struct_test.c  define_struct_test.h  for_each_1_keep_1_counted_test.h  for_each_1_keep_1_test.c  for_each_1_keep_2_counted_test.c  for_each_1_keep_2_test.c  for_each_1_keep_2_test.h  for_each_1_nesting_test.c  for_each_1_nesting_test.h  macro_utils_int_tests.c  main.c  mu_array_test.c  mu_array_test.h  mu_convert_enum_test.c  mu_convert_enum_test.h  mu_convert_enum_with_default_test.c  mu_count_1_or_more_arg_test.c  mu_count_1_or_more_arg_test.h  mu_count_arg_test.c  mu_count_arg_test.h  mu_count_array_items_test.c  mu_count_array_items_test.h  mu_define_enum_2_test.c  mu_define_enum_2_test.h  mu_define_enum_2_with_invalid_test.c  mu_define_enum_2_with_invalid_test.h  mu_define_enum_2_without_invalid_test.c  mu_define_enum_2_without_invalid_test.h  mu_define_enum_test.c  mu_define_enum_test.h  mu_define_enum_with_invalid_test.c  mu_define_enum_with_invalid_test.h  mu_define_local_enum_test.h  mu_different_test.c  mu_different_test.h  mu_eat_empty_args.c  mu_eat_empty_args_test.c  (+25 more)
tests/macro_utils_int/: CMakeLists.txt  define_struct_test.c  for_each_1_keep_1_counted_test.c  for_each_1_keep_1_test.h  for_each_1_keep_2_counted_test.h  for_each_1_keep_2_test.c  for_each_1_keep_2_test.h  mu_convert_enum_test.c  mu_convert_enum_with_default_test.h  mu_count_array_items_test.c  mu_define_local_enum_test.c  mu_for_each_1_paste_test.h  mu_pri_bool_test.c  mu_pri_enum_test.c  mu_pri_enum_test.h  mu_pri_time_t_test.c  mu_the_nth_arg_test.c  mu_the_nth_arg_test.h  mu_tostring_test.h  pri_kb_test.c  pri_kb_test.h  static_assert_test.h  test_helper.h
